--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,7 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
       - run: nix flake update --commit-lock-file
+      - run: scripts/refresh-readme.sh
 
       - uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
         with:
